--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Mink的个人博客
+title: Mink的博客
 subtitle: ''
 description: '用于记录一些有意思的事'
 keywords:
